# mocasin

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .project  .pydevproject  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.org  application.py  channel.py  coding-style.md  config.ini  dc_run  mapping.py  platform.py  process.py  processor.py  pykpn_env.sh  pyproject.toml  pytest.ini  pytrm.py  pytrm_run_slx  requirements  run_slx.py  scheduler.py  settings.ini  setup.cfg  setup.py  shell.nix  slx.py  system.py  testFile.py  tomahawk.py
.forgejo/workflows/: tests.yaml
.git-hooks/: README  pre-commit
common/: __init__.py  kpn.py  mapping.py  platform.py  representations.py
conf/: default.yaml  slx_config.ini.tmpl
conf/app/: hog.yaml  speaker_recognition.yaml
conf/app_platform_combination/: audio_filter_exynos.yaml  hog_exynos.yaml  (+1 more)
doc/: build_doc.py  ci.rst  conf.py  documentation.rst  getting_started.rst  index.rst  logging.rst  testing.rst
hydra_plugins/: __init__.py
misc/: bash-autocomplete.sh
mocasin/: __init__.py  __main__.py
platform/: noc_4x4.py  tomahawk2.py
pykpn/: __main__.py  tasks.py
pytrm/: __init__.py  application.py  channel.py  platform.py  process.py  processor.py  run_slx.py  scheduler.py  system.py  trace.py
representations/: metric_spaces.py
scripts/: pykpn_manager.py
slx/: __init__.py  application.py  kpn.py  mapping.py  slx.py  trace.py
symmetries/: __init__.py  permutation.py
test/: config_matplotlig_agg.sh  conftest.py  default.mapping  test_calculate_platform_symmetries.py  test_csv_plot.py  test_design_centering.py  test_enumerate_equivalent.py  test_find_design_center.py  test_generate_mapping.py  test_pareto_front.py  test_platform_to_autgrp.py  test_simulate.py  test_solve_query.py  test_symmetries.py  test_tetris.py  test_to_dot.py
visualization/: visualize_mapping.py
(+1025 files in other folders)
